--- a/src/dotnet/UI.Blazor.App/Pages/Landing/NewLanding/new-landing.css
+++ b/src/dotnet/UI.Blazor.App/Pages/Landing/NewLanding/new-landing.css
@@ -142,7 +142,9 @@ body.wide.app-maui .landing.new .landing-header {
 }
 .landing.new .landing-header .light-icon,
 .landing.new .landing-header .dark-icon,
-.landing.new .menu-header .dark-icon {
+.landing.new .menu-header .dark-icon,
+.docs-layout .menu-header .dark-icon,
+.docs-left-panel .c-header .dark-icon {
     @apply min-w-10 min-h-10 max-h-10;
 }
 
@@ -185,7 +187,9 @@ body.wide.app-maui .landing.new .landing-header {
 }
 .landing.new .landing-header .light-header .light-title,
 .landing.new .landing-header .dark-header .dark-title,
-.landing.new .menu-header .dark-title {
+.landing.new .menu-header .dark-title,
+.docs-layout .menu-header .dark-title,
+.docs-left-panel .c-header-header .dark-title {
     @apply max-w-32 md:max-w-none;
 }
 .landing.new .landing-header .c-btn-group {
@@ -782,6 +786,10 @@ body.narrow .landing.new .landing-menu {
     @apply flex-x items-center justify-start gap-x-2;
     @apply my-8;
 }
+.landing-menu .menu-footer .btn.btn-round .btn-content {
+    @apply min-w-10 min-h-10 max-w-10 max-h-10;
+}
+
 .landing-menu .menu-content {
     @apply flex-y items-start justify-start gap-y-2;
     @apply h-full;
